<resources>
    <string name="app_name">WeatherApp</string>
    <string name="search_bar_hint">Enter location</string>
    <string name="search">Search</string>
    <string name="city">City: </string>
    <string name="wind_speed">Wind speed: </string>
    <string name="weather">Weather: </string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="city_not_found_please_try_again">City not found, please try again</string>
    <string name="temperature">Temperature: </string>
</resources>