<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".presentation.weather.MainFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_field_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background"
        android:hint="@string/app_name"
        android:paddingTop="5dp"
        android:textColor="#FF5722"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_field_edit_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/city_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/city_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/city_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/search_button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wind_speed_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_title_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wind_speed_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/wind_speed_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/city_title_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weather_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wind_speed_title_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/temperature_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_description_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/temperature_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/temperature_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/weather_title_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weather_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/weather_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/wind_speed_value_text_view" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/weather_image_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_title_text_view"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>